--- a/templates/front/layout.html.twig
+++ b/templates/front/layout.html.twig
@@ -196,17 +196,50 @@
                 </div>
                 <div class="col-lg-5 mt-4 mt-lg-0 text-center text-lg-end">
                     <div class="front-actions">
-                        <a href="{{ path('front_event_list') }}" class="btn btn-outline-primary">
+                        <a href="{{ path('app_front_events_list') }}" class="btn btn-outline-primary">
                             <i class="fas fa-list me-2"></i> Browse Events
                         </a>
-                        <a href="{{ path('front_event_new') }}" class="btn btn-primary">
-                            <i class="fas fa-plus me-2"></i> Create Event
+                        <a href="{{ path('app_front_office') }}" class="btn btn-primary">
+                            <i class="fas fa-home me-2"></i> Home
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4 shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('app_front_office') }}">
+                <i class="fas fa-calendar-alt text-primary me-2"></i> Events
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.get('_route') == 'app_front_office' %}active{% endif %}" 
+                           href="{{ path('app_front_office') }}">
+                            <i class="fas fa-home me-1"></i> Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.get('_route') == 'app_front_events_list' %}active{% endif %}"
+                           href="{{ path('app_front_events_list') }}">
+                            <i class="fas fa-calendar-alt me-1"></i> Events
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fas fa-info-circle me-1"></i> About QR Codes
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <main class="container">
         {% for label, messages in app.flashes %}
